--- a/api/package.json
+++ b/api/package.json
@@ -23,11 +23,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.3.0",
+    "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "compression": "^1.7.4",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
     "nest-winston": "^1.9.2",
+    "nestjs-prisma": "^0.20.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
     "winston": "^3.9.0"
