--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,8 @@
     "@nestjs/swagger": "^6.3.0",
     "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "compression": "^1.7.4",
     "helmet": "^7.0.0",
     "morgan": "^1.10.0",
