[Fix][Lex] Migrated from Prisma to TypeOrm, updated configuration files, and moved jest configuration to separate file

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -11,7 +11,7 @@
     "baseUrl": ".",
     "outDir": "./dist",
     "paths": {
-      "@*": ["src/*"]
+      "@@*": ["src/*"]
     },
 
     "declaration": true,
